# selfblog

./: Cargo.toml  LICENSE.md  README.md  example-config.toml  sailfish.toml  template.html
.github/workflows/: rust.yml
example_blog/: README.md  about_me.html  contact.html  index.html  style.css
html/: articles.html  content.html  style.css
server/: server.rs
src/: blog.rs  config.rs  database.rs  errors.rs  gemini.rs  login_handler.rs  main.rs  models.rs  password.rs  post.rs  register_handler.rs  server.rs  services.rs  subcommands.rs
src/server/: server.rs
