[package]
name = "selfblog-cli"
version = "0.5.1"
edition = "2021"

[[bin]]
name = "selfblog-server"
version = "0.1.0"
edition = "2021"
path = "src/server.rs"

[[bin]]
name = "selfblog-gemini"
version = "0.0.0"
edition = "2021"
path = "src/gemini.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
pulldown-cmark = "0.9.2"
clap = { version = "3.2.17", features = ["derive"] }
log = "0.4.21"
env_logger = "0.9.0"
anyhow = "1.0.62"
daemonize = "0.4.1"
rocket = "0.5.0-rc.2"
tokio = "1.20.1"
serde = { version = "1.0.144", features = ["derive"] }

dirs = "4.0.0"
toml = "0.5.9"
derive_more = { version = "0.99.17", features = ["error", "display"] }
twinstar = { git = "https://github.com/panicbit/twinstar.git" }
futures-core = "0.3.23"
futures-util = "0.3.23"
lazy_static = "1.4.0"

# For twinstar
[dependencies.old_tokio]
package = "tokio"
version = "0.3.7"